src/test/deca/syntax/invalid/wrong_lvalue.deca
//  Description :
//            égalité entre deux nombres différents
//
// Résultat:
//left-hand side of assignment is not an lvalue
//
{
    1 = 2 ; 
}